 * New function: xbt_fifo_get_last_item()
 * Bug fix in xbt_dynar_shrink(): use the right element size
 * Use library init/fini functions for our initialization.
   - you can use logs and other feature as soon as you want in your
     code (even before the xbt_init / MSG_init)
   - xbt_exit is now a no-op and produce a warning when used.

 GRAS:
 * New function: gras_msgtype_get_name()

 SMPI
 * New Model SMPI (three-interval linear regression for correction factors)

 Build chain: bug fixes and overall polishing
 * Fix the 'make install' target.
   No need to use 'make install-simgrid' anymore
 * Introduce a 'make dist' target compiling a *source* archive
   'make package' compiles a binary archive
 * Compile java files only on need
 * Add --cd and --setenv command line options to tesh
 * Port to windows

 Tracing:
 * Tracing system
   - tracing API for MSG changes: TRACE_start has no
     longer parameters, the trace file is supplied through
     an option passed to simulator. Categories declaration
     and utilization remain the same. The following options
     are supported:
        --cfg=tracing/filename:msg.trace
        --cfg=tracing/platform:1      (categorized resource use)
        --cfg=tracing/msg/task:1      (task creation)
        --cfg=tracing/msg/process:1   (process creation, migration)
        --cfg=tracing/msg/volume:1    (volume of msg send/recv)
        --cfg=tracing/smpi:1          (smpi interface tracing)
   - examples of examples/msg/tracing updated

 * Tracing the MPI interface implemented by SMPI
   - Collective operations are traced with states
   - Point-to-Point operations are traced with states/links
   - Tracing activated by a parameter "-trace filename" passed
     to smpirun during execution (considering that simgrid
     is compiled with tracing enabled)
   - To run the simulation with gdb, the simulator
     accepts --cfg=tracing/smpi:1 to trace SMPI
   - tesh files to check if smpi tracing is ok

 * GTNetS tracing re-worked